--- a/AddressBook/Views/Account/ForgotPassword.cshtml
+++ b/AddressBook/Views/Account/ForgotPassword.cshtml
@@ -1,9 +1,8 @@
 ﻿@model AddressBook.Models.ForgotPasswordViewModel
 @{
-    Layout = "~/Views/Shared/_LayoutNoNavbarDark.cshtml";    
+    Layout = "~/Views/Shared/_LayoutNoNavbarDark.cshtml";
+    ViewBag.Title = "Forgot Password";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -16,8 +15,7 @@
                 @Html.ValidationSummary("", new { @class = "text-danger" })
 
                 <h4>Forgot your password?</h4>
-                <p>Enter your email address and we will send you instructions on how to reset your password.</p>
-                
+                <p>Enter your email address and we will send you instructions on how to reset your password.</p>                
             </div>
             <form>
                 <div class="form-group">
@@ -26,8 +24,8 @@
                 <input type="submit" class="btn btn-primary btn-block" href="login.html" value="Reset Password" />                
             </form>
             <div class="text-center">
-                <a class="d-block small mt-3" href="register.html">Register an Account</a>
-                <a class="d-block small" href="login.html">Login Page</a>
+                @Html.ActionLink("Register an Account", "Register", null, new { @class = "d-block small mt-3" })
+                @Html.ActionLink("Login", "Login", null, new { @class = "d-block small" })
             </div>
         </div>
     </div>
