Display logout and manage profile buttons on navbar

--- a/AddressBook/Views/Account/Login.cshtml
+++ b/AddressBook/Views/Account/Login.cshtml
@@ -18,8 +18,8 @@
                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger", placeholder="Password" })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <div class="form-check">
