--- a/AddressBook/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AddressBook/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    Layout = "~/Views/Shared/_LayoutNoNavbarDark.cshtml";
+    ViewBag.Title = "Reset Password Confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<div class="card card-login mx-auto mt-5">
+    <div class="card-header">Reset Password</div>
+    <div class="card-body">
+        <div class="text-center mt-4 mb-5">
+            <h4>Reset password confirmation</h4>
+            Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        </div>
+        @*<div class="text-center">
+            @Html.ActionLink("Login", "Login", null, new { @class = "btn btn-primary btn-block" })
+        </div>*@
+    </div>
 </div>
