--- a/AddressBook/Views/Shared/_LayoutNoNavbarDark.cshtml
+++ b/AddressBook/Views/Shared/_LayoutNoNavbarDark.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body class="bg-dark">
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
     </div>
 
