--- a/AddressBook/Views/Account/ForgotPassword.cshtml
+++ b/AddressBook/Views/Account/ForgotPassword.cshtml
@@ -8,7 +8,7 @@
 {
     @Html.AntiForgeryToken()    
     <div class="card card-login mx-auto mt-5">
-        <div class="card-header">Reset Password</div>
+        <div class="card-header">Forgot Password</div>
         <div class="card-body">
             <div class="text-center mt-4 mb-5">
 
@@ -21,7 +21,7 @@
                 <div class="form-group">
                     @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder= "Enter email address" })
                 </div>
-                <input type="submit" class="btn btn-primary btn-block" href="login.html" value="Reset Password" />                
+                <input type="submit" class="btn btn-primary btn-block" href="login.html" value="Confirm" />                
             </form>
             <div class="text-center">
                 @Html.ActionLink("Register an Account", "Register", null, new { @class = "d-block small mt-3" })
