--- a/AddressBook/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AddressBook/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,17 @@
 ﻿@{
+    Layout = "~/Views/Shared/_LayoutNoNavbarDark.cshtml";
     ViewBag.Title = "Forgot Password Confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+<div class="card card-login mx-auto mt-5">
+    <div class="card-header">Forgot Password</div>
+    <div class="card-body">
+        <div class="text-center mt-4 mb-5">
+            <h4>Forgot password confirmation</h4>
+            <p>Please check your email to reset your password.</p>
+        </div>
+        @*<div class="text-center">
+            @Html.ActionLink("Login", "Login", null, new { @class = "btn btn-primary btn-block" })
+        </div>*@
+    </div>
 </div>
-	
