--- a/AddressBook/Views/Account/ResetPassword.cshtml
+++ b/AddressBook/Views/Account/ResetPassword.cshtml
@@ -1,38 +1,43 @@
-﻿@model AddressBook.Models.ResetPasswordViewModel
+﻿
+@model AddressBook.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    Layout = "~/Views/Shared/_LayoutNoNavbarDark.cshtml";
+    ViewBag.Title = "Reset Password";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Code)
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+    <div class="card card-login mx-auto mt-5">
+        <div class="card-header">Reset Password</div>
+        <div class="card-body">
+
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Code)
+
+            <div class="text-center mt-4 mb-5">
+                <h4>Reset your password.</h4>
+            </div>
+
+            <div class="form-group">
+                <div class="form-row">
+                    @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-row">
+                    @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-row">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm password" })
+                </div>
+            </div>
+            <input type="submit" class="btn btn-primary btn-block" href="login.html" value="Reset Password" />
         </div>
     </div>
 }
