--- a/AddressBook/Views/Shared/_Navbar.cshtml
+++ b/AddressBook/Views/Shared/_Navbar.cshtml
@@ -34,7 +34,7 @@
                 </form>
             </li>
             <li class="nav-item dropdown">
-                @Html.Partial("_loginPartial")
+                @Html.Partial("_LoginPartial")
             </li>
         </ul>
     </div>
