--- a/AddressBook/Views/Shared/_Navbar.cshtml
+++ b/AddressBook/Views/Shared/_Navbar.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    @Html.ActionLink("Address Book", "Index", "Home", new { @class="navbar-brand"})
+    @Html.ActionLink(linkText: "Address Book", actionName: "Index", controllerName: "Home", routeValues: null, htmlAttributes: new { @class="navbar-brand"})
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
