--- a/AddressBook/Views/Manage/Index.cshtml
+++ b/AddressBook/Views/Manage/Index.cshtml
@@ -18,7 +18,7 @@
             }
             else
             {
-                @Html.ActionLink("Create", "SetPassword", null, new { @class = "btn btn-default" })
+                @Html.ActionLink("Create", "SetPassword", null, new { @class = "btn btn-danger" })
             }
         </dd>
         @*<dt>External Logins:</dt>
