--- a/AddressBook/Views/Shared/_Navbar.cshtml
+++ b/AddressBook/Views/Shared/_Navbar.cshtml
@@ -5,10 +5,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">        
         <ul class="navbar-nav navbar-sidenav" id="navbarAccordion">          
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-                <a class="nav-link" href="#">
-                    <i class="fa fa-fw fa-link"></i>
-                    <span class="nav-link-text">Link</span>
+            <li class="nav-item @Html.RouteIf("contacts", "active")" data-toggle="tooltip" data-placement="right" title="Link">
+                <a class="nav-link" href="@Url.Action("Index", "Contacts")">
+                    <i class="fa fa-address-book-o" aria-hidden="true"></i>
+                    <span class="nav-link-text">Contacts</span>
                 </a>
             </li>            
         </ul>
