--- a/AddressBook/Views/Shared/_Navbar.cshtml
+++ b/AddressBook/Views/Shared/_Navbar.cshtml
@@ -34,27 +34,9 @@
                 </form>
             </li>
             <li class="nav-item dropdown">
-                @Html.Partial("_LoginPartial")
+                @Html.Partial("_LogoutPartial")
             </li>
         </ul>
     </div>
 </nav>
 
-<!-- Custom scripts for this page-->
-<!-- Toggle between fixed and static navbar-->
-<script>
-    $('#toggleNavPosition').click(function () {
-        $('body').toggleClass('fixed-nav');
-        $('nav').toggleClass('fixed-top static-top');
-    });
-
-</script>
-<!-- Toggle between dark and light navbar-->
-<script>
-    $('#toggleNavColor').click(function() {
-      $('nav').toggleClass('navbar-dark navbar-light');
-      $('nav').toggleClass('bg-dark bg-light');
-      $('body').toggleClass('bg-dark bg-light');
-    });
-
-</script>
