Separate Scripts bundles

--- a/AddressBook/Views/Shared/_Scripts.cshtml
+++ b/AddressBook/Views/Shared/_Scripts.cshtml
@@ -1,3 +1,17 @@
-﻿
-@Scripts.Render("~/bundles/scripts")
+﻿@Scripts.Render("~/bundles/jquery")
 
+@Scripts.Render("~/bundles/jqueryval")
+
+@Scripts.Render("~/bundles/jqueryui")
+
+@Scripts.Render("~/bundles/bootstrap")
+
+@Scripts.Render("~/bundles/jquery-datables")
+
+@Scripts.Render("~/bundles/modernizr")
+
+@Scripts.Render("~/bundles/sb-admin")
+
+@Scripts.Render("~/bundles/globalScript")
+
+@Scripts.Render("~/bundles/appScripts")
