--- a/AddressBook/Views/Shared/_Stylesheets.cshtml
+++ b/AddressBook/Views/Shared/_Stylesheets.cshtml
@@ -1,1 +1,9 @@
-﻿
+﻿@Styles.Render("~/Content/bootstrap")
+
+@Styles.Render("~/Content/bootstrap-extensions")
+
+@Styles.Render("~/Content/datatables-bootstrap")
+
+@Styles.Render("~/Content/font-awesome")
+
+@Styles.Render("~/Content/sb-admin")
