--- a/AddressBook/Views/Shared/_Scripts.cshtml
+++ b/AddressBook/Views/Shared/_Scripts.cshtml
@@ -12,6 +12,8 @@
 
 @Scripts.Render("~/bundles/sb-admin")
 
+@Scripts.Render("~/bundles/third-party-plugins")
+
 @Scripts.Render("~/bundles/globalScript")
 
 @Scripts.Render("~/bundles/appScripts")
