--- a/AddressBook/Views/Shared/_Navbar.cshtml
+++ b/AddressBook/Views/Shared/_Navbar.cshtml
@@ -5,8 +5,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">        
         <ul class="navbar-nav navbar-sidenav" id="navbarAccordion">          
-            <li class="nav-item @Html.RouteIf("contacts", "active")" data-toggle="tooltip" data-placement="right" title="Link">
-                <a class="nav-link" href="@Url.Action("Index", "Contacts")">
+            <li class="nav-item @Html.RouteIf("home", "active")" data-toggle="tooltip" data-placement="right" title="Link">
+                <a class="nav-link" href="@Url.Action("Index", "Home")">
                     <i class="fa fa-address-book-o" aria-hidden="true"></i>
                     <span class="nav-link-text">Contacts</span>
                 </a>
