--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -2,13 +2,11 @@
     ViewBag.Title = "Contacts";
 }
 
-
-
 <div class="col-lg-3">
     <div class="card" style="overflow:hidden;">
         <div class="card-block">
-            <div class="card px-2">
-                <div class="row">
+            <div class="card">
+                <div class="card-block">
                     <div class="input-group">
                         <input id="search-contacts" class="form-control" type="text" placeholder="Search for contacts">
                         <span class="input-group-btn">
@@ -16,6 +14,17 @@
                                 <i class="fa fa-search"></i>
                             </button>
                         </span>
+                    </div>
+                </div>
+                <div class="card-block">
+                    <div class="form-group px-2 py-2">
+                        <label for="search-types">Search By:</label>
+                        <select class="form-control" id="search-types">
+                            <option>Last and first name</option>
+                            <option>Last Name</option>
+                            <option>First Name</option>
+                            <option>Groups</option>
+                        </select>
                     </div>
                 </div>
             </div>
