--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
             <div class="card">
                 <div class="card-block">
                     <div class="input-group">
-                        <input id="search-contacts" class="form-control" type="text" placeholder="Search for contacts">
+                        <input id="search-contacts" class="form-control" type="search" placeholder="Search for contacts">
                         <span class="input-group-btn">
-                            <button class="btn btn-primary" type="button">
+                            <button  id="search-contacts-btn" class="btn btn-primary" type="button">
                                 <i class="fa fa-search"></i>
                             </button>
                         </span>
@@ -18,8 +18,8 @@
                 </div>
                 <div class="card-block">
                     <div class="form-group px-2 py-2">
-                        <label for="search-types">Search By:</label>
-                        <select class="form-control" id="search-types">
+                        <label for="search-types-list">Search By:</label>
+                        <select class="form-control" id="search-types-list">
                             <option>Last and first name</option>
                             <option>Last Name</option>
                             <option>First Name</option>
@@ -51,4 +51,5 @@
             </div>
         </div>
     </a>
+    {{Groups}}
 </script>
