Add create contact partial and set scripts for it

--- a/AddressBook/Views/Shared/_Layout.cshtml
+++ b/AddressBook/Views/Shared/_Layout.cshtml
@@ -16,5 +16,6 @@
 
     @Html.Partial("_Scripts")
     @RenderSection("scripts", required: false)
+    @RenderSection("pagespecific", required: false)
 </body>
 </html>
