--- a/AddressBook/Views/Shared/_Scripts.cshtml
+++ b/AddressBook/Views/Shared/_Scripts.cshtml
@@ -1,6 +1,7 @@
 ﻿@Scripts.Render("~/bundles/jquery")
 
-@Scripts.Render("~/bundles/jqueryval")
+@* Put this bundle only on pages *@
+@*@Scripts.Render("~/bundles/jqueryval")*@
 
 @Scripts.Render("~/bundles/jqueryui")
 
@@ -15,5 +16,3 @@
 @Scripts.Render("~/bundles/third-party-plugins")
 
 @Scripts.Render("~/bundles/globalScript")
-
-@Scripts.Render("~/bundles/appScripts")
