--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -2,35 +2,48 @@
     ViewBag.Title = "Contacts";
 }
 
-<div class="col-lg-3">
-    <div class="card" style="overflow:hidden;">
-        <div class="card-block">
-            <div class="card">
-                <div class="card-block">
-                    <div class="input-group">
-                        <input id="search-contacts" class="form-control" type="search" placeholder="Search for contacts">
-                        <span class="input-group-btn">
-                            <button  id="search-contacts-btn" class="btn btn-primary" type="button">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
+<div class="row">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="card" style="overflow:hidden;">
+            <div class="card-block">
+                <div class="card">
+                    <div class="card-block">
+                        <div class="input-group">
+                            <input id="search-contacts" class="form-control" type="search" placeholder="Search for contacts">
+                            <span class="input-group-btn">
+                                <button id="search-contacts-btn" class="btn btn-primary" type="button">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                        </div>
                     </div>
-                </div>
-                <div class="card-block">
-                    <div class="form-group px-2 py-2">
-                        <label for="search-types-list">Search By:</label>
-                        <select class="form-control" id="search-types-list">
-                            <option>Last and first name</option>
-                            <option>Last Name</option>
-                            <option>First Name</option>
-                            <option>Groups</option>
-                        </select>
+                    <div class="card-block">
+                        <div class="form-group px-2 py-2">
+                            <label for="search-types-list">Search By:</label>
+                            <select class="form-control" id="search-types-list">
+                                <option>Last and first name</option>
+                                <option>Last Name</option>
+                                <option>First Name</option>
+                                <option>Groups</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="card-block list-group" id="contact-list-target">
+                <div class="mx-auto loader"></div>
+            </div>
         </div>
-        <div class="card-block list-group" id="contact-list-target">
-            <div class="mx-auto loader"></div>           
+    </div>
+    <div class="col-sm-9 col-md-9 col-lg-9">        
+        <div class="row px-5">            
+            <button id="create-contact-btn" type="button" class="btn btn-outline-primary" style="cursor:pointer">
+                <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+            </button>            
+        </div>        
+        <hr />
+        <div class="row px-2" id="contact-view-panel">
+               
         </div>
     </div>
 </div>
@@ -51,5 +64,8 @@
             </div>
         </div>
     </a>
-    {{Groups}}
 </script>
+
+@section pagespecific {
+    <script type="text/javascript" src="~/Scripts/Web/Home/index.js"></script>
+}
