--- a/AddressBook/Views/Shared/_Layout.cshtml
+++ b/AddressBook/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     @Html.Partial("_Header")
 </head>
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body class="fixed-nav sticky-footer bg-dark sidenav-toggled" id="page-top">
     <!-- Navigation -->
     @Html.Partial("_Navbar")
 
