--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
     </div>
     <div class="col-sm-9 col-md-9 col-lg-9">        
         <div class="row">            
-            <button id="create-contact-btn" type="button" class="btn btn-outline-primary" style="cursor:pointer">
+            <button id="create-contact-btn" type="button" class="btn btn-info mx-2" style="cursor:pointer">
                 <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
             </button>            
         </div>        
