Setup datepicker for birthdate

--- a/AddressBook/Views/Shared/_Stylesheets.cshtml
+++ b/AddressBook/Views/Shared/_Stylesheets.cshtml
@@ -8,4 +8,6 @@
 
 @Styles.Render("~/Content/sb-admin")
 
+@Styles.Render("~/Content/third-party-stylesheets")
+
 @Styles.Render("~/Content/app-stylesheets")
