--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -1,58 +1,78 @@
 ﻿@model AddressBook.ViewModels.ContactCreateViewModel
 
-<div class="row card bg-light col-lg-12">
-    @using (Html.BeginForm("Create", "Contacts", FormMethod.Post))
+<div class="row card bg-light col-lg-12 py-2">
+    @using (Html.BeginForm("Create", "Contacts", FormMethod.Post, new { @class= "form-horizontal" }))
     {
         @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-horizontal">
-            <h4>Contact</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="card" style="width: 15rem;">
-                <img src="@Url.Content(Model.ProfileImagePath)" alt="Alternate Text" class="profile-image-upload img-thumbnail" style="max-height:140px" />
-                <div class="card-block">
-                    <label class="btn btn-outline-info mt-2 mx-1">
-                        Browse @Html.TextBoxFor(m => m.ProfileImagePath, new
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="card" style="width: 15rem;">
+                    <img src="@Url.Content(Model.ProfileImagePath)" alt="Alternate Text" class="profile-image-upload img-thumbnail" style="max-height:140px" />
+                    <div class="card-block">
+                        <label class="btn btn-outline-info mt-2 mx-1">
+                            Browse @Html.TextBoxFor(m => m.ProfileImagePath, new
                           {
                               type = "file",
                               accept = "image/*",
                               @class = "profile-image-browser",
                               style = "display:none"
                           })
-                    </label>
-                    <div class="profile-image-info">
-                        <span class="label label-info" style="font-size:small; margin-left:5px;">No profile picture selected.</span>
+                        </label>
+                        <div class="profile-image-info">
+                            <span class="label label-info" style="font-size:small; margin-left:5px;">No profile picture selected.</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-lg-3">
+                <div class="form-group">
+                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", placeholder = "First name" } })
                     @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
                 </div>
+                <div class="form-group">
+                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", placeholder="Last name" } })
+                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })                    
+                </div>
+                <div class="form-group">
+                   @Html.EditorFor(model => model.Birthdate, new { htmlAttributes = new { @class = "form-control datepicker", placeholder = "Birthdate" } })
+                    @Html.ValidationMessageFor(model => model.Birthdate, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Relationship, new { htmlAttributes = new { @class = "form-control", placeholder = "Relationship" } })
+                    @Html.ValidationMessageFor(model => model.Relationship, "", new { @class = "text-danger" })
+                </div>                
             </div>
+            <div class="col-lg-3">
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Title" } })
+                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Organization, new { htmlAttributes = new { @class = "form-control", placeholder = "Organization" } })
+                    @Html.ValidationMessageFor(model => model.Organization, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-lg-3">
+                <div class="row float-right">                    
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>                    
                 </div>
+                <div class="row">
+
+                </div>                
             </div>
-        </div>
+        </div>         
+        <hr />
     }
 </div>
 
 <script type="text/javascript" src="/Scripts/Web/Contacts/create.js"></script>
 <script type="text/javascript" src="/Scripts/file-processing.js"></script>
-@Scripts.Render("~/bundles/jqueryval")    
+@Scripts.Render("~/bundles/jqueryval")
 
 
 
