Display group list and add input for adding new groups

--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -37,8 +37,8 @@
     </div>
     <div class="col-sm-9 col-md-9 col-lg-9">        
         <div class="row">            
-            <button id="create-contact-btn" type="button" class="btn btn-info mx-2" style="cursor:pointer">
-                <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+            <button id="create-contact-btn" type="button" class="btn btn-info rounded-circle mx-2" style="cursor:pointer">
+                <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
             </button>            
         </div>        
         <hr />
