--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                                 <option>Last and first name</option>
                                 <option>Last Name</option>
                                 <option>First Name</option>
-                                <option>Groups</option>
+                                <option>Group</option>
                             </select>
                         </div>
                     </div>
@@ -57,9 +57,9 @@
             <div class="col-md-8 px-3">
                 <div class="px-3">
                     <h6 class="">{{LastName}} {{FirstName}}</h6>
-                    <span class="text-muted">{{PhoneNumber}}asdasdASDAS</span> <br />
-                    <span class="text-muted">{{Email}}ASDASD</span> <br />
-                    <span class="text-muted">{{Address}}asassa</span><br />
+                    <span class="text-muted">{{PhoneNumber}}</span> <br />
+                    <span class="text-muted">{{Email}}</span> <br />
+                    <span class="text-muted">{{Address}}</span><br />
                 </div>
             </div>
         </div>
